[MSE] REGRESSION(r171033): ASSERT in WebCore::MediaSource::onReadyStateChange() https://bugs.webkit.org/show_bug.cgi?id=134941

Reviewed by Eric Carlson.

Source/WebCore:
Only do our modified-order change of the readyState if the error parameter is empty,
as that's the only case where a duration change will cause an inadvertant readyState
change.

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::streamEndedWithError):

LayoutTests:
Update media/media-source/media-source-end-of-stream.html to use an empty parameter, rather
than an empty string parameter, to endOfStream().

* media/media-source/media-source-end-of-stream-expected.txt:
* media/media-source/media-source-end-of-stream.html:


Canonical link: https://commits.webkit.org/152900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171148 268f45cc-cd09-0410-ab3c-d52691b4dbfc